--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         {
             background-color: #646464;
             text-align: center;
+            margin: 0 !important;
+      padding: 0 !important;
         }
         canvas
         {
@@ -20,127 +22,130 @@
 <body>
     <canvas width="640" height="480"></canvas>
     <script>
-        var canvas = document.querySelector("canvas");
-        var drawingSurface = canvas.getContext("2d");
-        var spriteObject =
-        {
-            x:0,
-            y:0,
-            width:136,
-            height:162
-        };
-        var telescope = Object.create(spriteObject);
-        telescope.x = 239;
-        telescope.y = 172;
-        var image = new Image();
-        image.addEventListener("load", loadHandler, false);
-        image.src = "https://file.garden/Zl9pI6rtSjkbw9F6/telescope.png";
-        var Xspeed = 0;
-        var Yspeed = 0;
-        var moveLeft = false;
-        var moveRight = false;
-        var moveUp = false;
-        var moveDown = false;
-        window.addEventListener("keydown", function(e)
-        {
-            switch(e.key)
-            {
-                case "ArrowUp":
-                    moveUp = true;
-                    break;
-                case "ArrowDown":
-                    moveDown = true;
-                    break;
-                case "ArrowLeft":
-                    moveLeft = true;
-                    break;
-                case "ArrowRight":
-                    moveRight = true;
-                    break;
-            }
-        }, false);
-        window.addEventListener("keyup", function(e)
-        {
-            switch(e.key)
-            {
-                case "ArrowUp":
-                    moveUp = false;
-                    break;
-                case "ArrowDown":
-                    moveDown = false;
-                    break;
-                case "ArrowLeft":
-                    moveLeft = false;
-                    break;
-                case "ArrowRight":
-                    moveRight = false;
-                    break;
-            }
-        }, false);
-        function loadHandler()
-        {
-            update();
-        }
-        function update()
-        {
-            // create the animation loop
-            window.requestAnimationFrame(update, canvas);
-            telescope.x += Xspeed;
-            telescope.y += Yspeed;
-            if(moveUp && !moveDown)
-            {
-                Yspeed = -5;
-            }
-            if(moveDown && !moveUp)
-            {
-                Yspeed = 5;
-            }
-            if(moveLeft && !moveRight)
-            {
-                Xspeed = -5;
-            }
-            if(moveRight && !moveLeft)
-            {
-                Xspeed = 5;
-            }
-            if(!moveUp && !moveDown)
-            {
-                Yspeed = 0;
-            }
-            if(!moveLeft && !moveRight)
-            {
-                Xspeed = 0;
-            }
-            if(telescope.x < 0)
-            {
-                telescope.x = 0;
-            }
-            if(telescope.y < 0)
-            {
-                telescope.y = 0;
-            }
-            if(telescope.x + telescope.width > 614)
-            {
-                telescope.x = 614 - telescope.width;
-            }
-            if(telescope.y + telescope.height > 506)
-            {
-                telescope.y = 506 - telescope.height;
-            }
-            render();
-        }
-        function render()
-        {
-            drawingSurface.clearRect(0,0, canvas.width, canvas.height);
-            drawingSurface.fillStyle = "black";
-            drawingSurface.fillRect(0, telescope.y + telescope.width, canvas.width, canvas.height);
-            drawingSurface.fillRect(telescope.x + 162, telescope.y - 506 + telescope.height, canvas.width, canvas.height);
-            drawingSurface.drawImage( image,
-            Math.floor(telescope.x), Math.floor(telescope.y),
-            telescope.height, telescope.width
-            );
 
+    var canvas = document.querySelector("canvas");
+    var drawingSurface = canvas.getContext("2d");
+    var spriteObject =
+    {
+        x:0,
+        y:0,
+        width:136,
+        height:162
+    };
+    var telescope = Object.create(spriteObject);
+    telescope.x = 239;
+    telescope.y = 172;
+    var image = new Image();
+    image.addEventListener("load", loadHandler, false);
+    image.src = "https://file.garden/Zl9pI6rtSjkbw9F6/circle.png";
+    var Xspeed = 0;
+    var Yspeed = 0;
+    var moveLeft = false;
+    var moveRight = false;
+    var moveUp = false;
+    var moveDown = false;
+    window.addEventListener("keydown", function(e)
+    {
+        switch(e.key)
+        {
+            case "ArrowUp":
+                moveUp = true;
+                break;
+            case "ArrowDown":
+                moveDown = true;
+                break;
+            case "ArrowLeft":
+                moveLeft = true;
+                break;
+            case "ArrowRight":
+                moveRight = true;
+                break;
         }
+    }, false);
+    window.addEventListener("keyup", function(e)
+    {
+        switch(e.key)
+        {
+            case "ArrowUp":
+                moveUp = false;
+                break;
+            case "ArrowDown":
+                moveDown = false;
+                break;
+            case "ArrowLeft":
+                moveLeft = false;
+                break;
+            case "ArrowRight":
+                moveRight = false;
+                break;
+        }
+    }, false);
+    function loadHandler()
+    {
+        update();
+    }
+    function update()
+    {
+        // create the animation loop
+        window.requestAnimationFrame(update, canvas);
+        telescope.x += Xspeed;
+        telescope.y += Yspeed;
+        if(moveUp && !moveDown)
+        {
+            Yspeed = -5;
+        }
+        if(moveDown && !moveUp)
+        {
+            Yspeed = 5;
+        }
+        if(moveLeft && !moveRight)
+        {
+            Xspeed = -5;
+        }
+        if(moveRight && !moveLeft)
+        {
+            Xspeed = 5;
+        }
+        if(!moveUp && !moveDown)
+        {
+            Yspeed = 0;
+        }
+        if(!moveLeft && !moveRight)
+        {
+            Xspeed = 0;
+        }
+        if(telescope.x < 0)
+        {
+            telescope.x = 0;
+        }
+        if(telescope.y < 0)
+        {
+            telescope.y = 0;
+        }
+        if(telescope.x + telescope.width > 614)
+        {
+            telescope.x = 614 - telescope.width;
+        }
+        if(telescope.y + telescope.height > 506)
+        {
+            telescope.y = 506 - telescope.height;
+        }
+        render();
+    }
+    function render()
+    {
+        drawingSurface.clearRect(0,0, canvas.width, canvas.height);
+        drawingSurface.fillStyle = "black";
+        drawingSurface.fillRect(0, telescope.y + telescope.width, canvas.width, canvas.height); //bottom
+        drawingSurface.fillRect(telescope.x + 162, telescope.y - 506 + telescope.height, canvas.width, canvas.height); //right
+        drawingSurface.fillRect(0, 0, telescope.x, canvas.width, canvas.height); //left
+        drawingSurface.fillRect(0, telescope.y + telescope.width - 616, canvas.width, canvas.height)//top
+        drawingSurface.drawImage( image,
+        Math.floor(telescope.x), Math.floor(telescope.y),
+        telescope.height, telescope.width
+        );
+
+    }
     </script>
 </body>
 </html>
